--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   # 新添加的依赖
   english_words: ^3.1.3
+  path_provider: ^0.4.1
+
 
 #  开发环境依赖的工具包（而不是flutter应用本身依赖的包）
 dev_dependencies:
