--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # 新添加的依赖
   english_words: ^3.1.3
   path_provider: ^0.4.1
+  dio: ^2.1.5
+  web_socket_channel: ^1.0.9
 
 
 #  开发环境依赖的工具包（而不是flutter应用本身依赖的包）
