--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   # 新添加的依赖
   english_words: ^3.1.3
   path_provider: ^0.4.1
-  dio: ^2.1.5
+  dio: 2.1.8
   web_socket_channel: ^1.0.9
 
 
